--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <!-- This is the main content of the quiz page -->
     <div id="maincontent">
         <!-- Created a div id for current time -->
-        <div id="timer"></div>
+        <div id="startTimer"></div>
         <!-- Created a div id for quiz content -->
-        <div id="questions">
+        <div id="questionsDiv">
             <h1>Coding Quiz Challenge</h1>
             <p>Welcome coders! Here's a fun mini-quiz to test your base knowledge on HTML, Javascript and CSS fundamentals.
             <br>Try to answer the following questiosn within the alloted time.
