Added event listener too store scores and initails

--- a/HighScores.html
+++ b/HighScores.html
@@ -14,7 +14,7 @@
     <!-- Created main content for High Scores html -->
     <div id="maincontent">
         <!--Created for timer for High Scores page -->
-        <div id="timer"></div>
+        <div id="startTimer"></div>
         <!-- Created div id for questions -->
         <div id="questionsDiv">
             <h1>Highscores</h1>
