--- a/HighScores.html
+++ b/HighScores.html
@@ -12,9 +12,9 @@
 
 <body>
     <!-- Created main content for High Scores html -->
-    <div id="maincontent">
+    <div id="wrapper">
         <!--Created for timer for High Scores page -->
-        <div id="startTimer"></div>
+        <div id="currentTime"></div>
         <!-- Created div id for questions -->
         <div id="questionsDiv">
             <h1>Highscores</h1>
