--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <body>
     <!-- Created link to highscores web page -->
-    <a href="highscores.html">View Highscores</a>
+    <a href="HighScores.html">View Highscores</a>
     <!-- This is the main content of the quiz page -->
-    <div id="maincontent">
+    <div id="wrapper">
         <!-- Created a div id for current time -->
-        <div id="startTimer"></div>
+        <div id="currentTime"></div>
         <!-- Created a div id for quiz content -->
         <div id="questionsDiv">
             <h1>Coding Quiz Challenge</h1>
@@ -27,7 +27,7 @@
             <br> Keep in mind that incorrect answers will penalize your time by ten seconds!</p>
             <ul id="choicesUl"></ul>
             <!-- Created button to start quiz -->
-            <button id="startQuiz">Start Quiz</button>
+            <button id="startTime">Start Quiz</button>
         </div>
 
     </div>
