edited index page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="questionsDiv">
             <h1>Coding Quiz Challenge</h1>
             <p>Welcome coders! Here's a fun mini-quiz to test your base knowledge on HTML, Javascript and CSS fundamentals.
-            <br>Try to answer the following questiosn within the alloted time.
+            <br>Try to answer the following questions within the alloted time.
             <br> Keep in mind that incorrect answers will penalize your time by ten seconds!</p>
             <ul id="choicesUl"></ul>
             <!-- Created button to start quiz -->
